2010-01-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-setup-vprop): store the root-path
	directory with a trailing slash.
	(vc-clearcase-root): new function
	(vc-clearcase-gui-vtree-browser): fix call to
	`start-process-shell-command'

2009-10-27  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-read-activity): 448 use a better default activity in
	`ucm-actb-mode' and `ucm-lsact-mode` buffers.

	* vc-clearcase.el (clearcase-add-attribute)
	(clearcase-remove-attribute): new functions

2009-10-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-checkin-command, ucm-checkin-activity): don't
	use `with-current-buffer' when extracting the checkin comment

2009-09-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-file-fprop): 445 find the FPROP in
	derived buffers of the file (such as version backups)
	(clearcase-diff-with-diff): 446 use `vc-find-revision' to obtain
	required revisions, also don't delete the revisions afterwards.

2009-09-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-diff-with-diff): don't make FILE
	relative to the current directory when passing it to diff.

2009-08-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-revision-contributors): make REVISION
	optional, to allow for fething contributors for a checked out
	revision.
	(vc-clearcase-state-heuristic): if the latest version was merged
	into the current checkedout one, mark the file as 'edited

2009-08-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-register): 437 support registering
	multiple files.  Also use the COMMENT parameter if passed in.
	(vc-clearcase-state, vc-clearcase-state-heuristic): return
	'unregistered when file is not registered with ClearCase

2009-07-20  Alex Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-annotate-warp-revisionm)
	(vc-annotate-extract-revision-at-line): declare function to